# Automatic-Backup

./: .gitignore  CMakeLists.txt  Issues-todo.txt  README.md  ReleaseNotes.txt  Utilities.h  WinMakefile  WinMakefile.Debug  WinMakefile.Release  authexec.c  backupConfigData.h  backupDirStruct.cpp  backupDirStruct.h  backupExecuter.cpp  backupExecuter.h  backupMac.pro  backupMain.cpp  backupMain.h  backupSplash.cpp  backupSplash.h  backupdirstruct.cpp  backupdirstruct.h  backupengine.cpp  backupengine.h  backupwin10.pro  backupwin7.pro  backupwin7.pro.user.2.6pre1  backupwindow.qrc  backupwindow.ui  cleanupDialog.cpp  cleanupDialog.h  cleanupDialog.ui  cleanupdialog.cpp  crc32.h  deploywin10.cmd  filterSettings.h  filterSettings.ui  main.cpp  mainwindow.ui  test  (+1 more)
forms/: cleanupDialog.ui  mainwindow.ui
ressources/: Info_mac.plist  backup.icns  backup.odt  backup.qrc  backup.rc  bugs.txt  help.html  version.h.in  version.inc
src/: Utilities.h  backupConfigData.h  backupDirStruct.cpp  backupEngine.cpp  backupExecuter.cpp  backupExecuter.h  backupMain.cpp  backupMain.h  backupSplash.cpp  cleanupDialog.cpp  cleanupDialog.h  crc32.cpp  filterSettings.cpp  main.cpp  utilities.cpp
